src/snapshots/tiny_dc__app__tests__renders_correctly_with_search_input.snap
---
source: src/app.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                 Tiny DC v0.1.2                                 "
"|> /home/user                                                                   "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃>.git/  a                                                                     ┃"
"┃ dir1/  s                                                                     ┃"
"┃ .gitignore                                                                   ┃"
"┃ Cargo.toml                                                                   ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" /test                                                                          "
