src/snapshots/tiny_dc__app__tests__renders_correctly_without_help_popup_after_key_event_toggle.snap
---
source: src/app.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                 Tiny DC v0.1.1                                 "
"|> /home/user                                                                   "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃>.git/  a                                                                     ┃"
"┃ dir1/  s                                                                     ┃"
"┃ .gitignore                                                                   ┃"
"┃ Cargo.toml                                                                   ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"Ctrl + (d)irectory │ (f)recent                                  Press ? for help"
